# msdf_font

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENCIES_LICENSES.txt  LICENSE.MIT  README.md  TODO.md
benches/: atlas.rs  glyph.rs
dev/: Cargo.toml
dev/src/: app.rs  font_data.rs  main.rs  shader.wgsl
examples/: simple.rs  wgpu.rs
msdf_font/: Cargo.toml  README.md
msdf_font/src/: bitmap.rs  contour.rs  contour_combiner.rs  distance.rs  edge.rs  edge_color.rs  edge_coloring.rs  edge_selector.rs  glyph.rs  lib.rs  shape.rs  shape_distance_finder.rs  solvers.rs  types.rs  utils.rs  vec2.rs
msdf_font/src/atlas/: atlas_bitmap_data.rs  bitmap.rs  mod.rs  packer.rs
src/: bitmap.rs  contour_combiner.rs  edge.rs  edge_color.rs  edge_selector.rs  error_correction.rs  glyph.rs  lib.rs  shape.rs  shape_distance_finder.rs  solvers.rs  types.rs  vec2.rs
src/atlas/: bitmap.rs  mod.rs  packer.rs
src/error_correction/: artifact_classifier.rs  mod.rs
