[workspace]
resolver = "2"
members = ["dev", "msdf_font"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
glam = "0.32"
ttf-parser = "0.25"
image = "0.25"
i_overlay = "4.4"
rayon = "1.11"

msdf_font.path = "msdf_font"

# Dev
winit = "0.30"
l3gion.path = "../l3gion/l3gion"
pollster = "0.4"
bytemuck = "1.25"

[workspace.lints.clippy]
perf = "deny"
unwrap_used = "deny"
complexity = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
