[package]
name = "msdf_font"
version = "0.1.0"
edition = "2024"
authors = ["Renato Cunha"]
license = "MIT or Apache-2.0"
repository = "https://github.com/Cunha-Renato/msdf_font"
keywords = ["msdf", "sdf", "distance-field", "font-atlas"]
categories = ["graphics", "gui"]
description = "Msdf implementation in Rust"

[dependencies]
glam = "0.32"
ttf-parser = "0.25"

kurbo = { version = "0.13", optional = true }
linesweeper = { version = "0.3", optional = true }
rayon = { version = "1.0", optional = true }

[dev-dependencies]
image = "0.25"
# winit = "0.30"
# l3gion.path = "../l3gion/l3gion"
# pollster = "0.4"
# bytemuck = "1.25"

[features]
atlas = ["dep:rayon"]
fix_geometry = ["dep:kurbo", "dep:linesweeper"]

[lints.clippy]
perf = "deny"
unwrap_used = "deny"
complexity = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
