[package]
name = "msdf_font"
version = "0.2.1"
edition = "2024"
authors = ["Renato Cunha"]
license = "MIT or Apache-2.0"
repository = "https://github.com/Cunha-Renato/msdf_font"
keywords = ["msdf", "sdf", "distance-field", "font-atlas"]
categories = ["graphics", "gui"]
description = "Msdf implementation in Rust"

[dependencies]
glam = "0.32"
ttf-parser = "0.25"
kurbo = { version = "0.13" }
linesweeper = { version = "0.3" }

rayon = { version = "1.0", optional = true }

[dev-dependencies]
glam = "0.32"
image = "0.25"
winit = "0.30"
wgpu = "28.0"
pollster = "0.4"
bytemuck = { version = "1.0", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }

[features]
atlas = ["dep:rayon"]

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "glyph"
harness = false

[[bench]]
name = "atlas"
harness = false
required-features = ["atlas"]
