[package]
name = "dev"
version.workspace = true
edition.workspace = true

[dependencies]
msdf_font = { workspace = true, features = ["atlas", "fix_geometry"] }
image.workspace = true
l3gion.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true

[lints]
workspace = true
