[package]
name = "msdf_font"
version.workspace = true
edition.workspace = true

[dependencies]
glam.workspace = true
ttf-parser.workspace = true

kurbo = { workspace = true, optional = true }
linesweeper = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[lints]
workspace = true

[features]
atlas = ["dep:rayon"]
fix_geometry = ["dep:kurbo", "dep:linesweeper"]
